# backend/openapi.json
@@ -119,6 +119,31 @@
             "description": "Not Found"
           }
         }
+      },
+      "delete": {
+        "tags": [
+          "RecipeJoe.Api"
+        ],
+        "operationId": "DeleteRecipe",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
       }
     },
     "/api/recipes/{id}/image": {
